// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KPICard Component > renders with integer value correctly 1`] = `
<div>
  <div
    class="glass-card rounded-xl p-5 relative overflow-hidden group hover-lift"
  >
    <div
      class="absolute top-0 right-0 -mr-8 -mt-8 w-24 h-24 bg-gradient-to-br from-blue-500/10 to-purple-500/10 dark:from-blue-500/5 dark:to-purple-500/5 rounded-full blur-2xl opacity-0 group-hover:opacity-100 transition-opacity duration-500"
    />
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider mb-1"
        >
          交易次数
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-bold tracking-tight transition-colors duration-200 text-gray-900 dark:text-white"
          >
            150
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with negative value correctly 1`] = `
<div>
  <div
    class="glass-card rounded-xl p-5 relative overflow-hidden group hover-lift"
  >
    <div
      class="absolute top-0 right-0 -mr-8 -mt-8 w-24 h-24 bg-gradient-to-br from-blue-500/10 to-purple-500/10 dark:from-blue-500/5 dark:to-purple-500/5 rounded-full blur-2xl opacity-0 group-hover:opacity-100 transition-opacity duration-500"
    />
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider mb-1"
        >
          今日盈亏
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-bold tracking-tight transition-colors duration-200 text-loss drop-shadow-sm"
          >
            -$1,234.56
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with percentage value correctly 1`] = `
<div>
  <div
    class="glass-card rounded-xl p-5 relative overflow-hidden group hover-lift"
  >
    <div
      class="absolute top-0 right-0 -mr-8 -mt-8 w-24 h-24 bg-gradient-to-br from-blue-500/10 to-purple-500/10 dark:from-blue-500/5 dark:to-purple-500/5 rounded-full blur-2xl opacity-0 group-hover:opacity-100 transition-opacity duration-500"
    />
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider mb-1"
        >
          胜率
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-bold tracking-tight transition-colors duration-200 text-gray-900 dark:text-white"
          >
            68.5%
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with positive value correctly 1`] = `
<div>
  <div
    class="glass-card rounded-xl p-5 relative overflow-hidden group hover-lift"
  >
    <div
      class="absolute top-0 right-0 -mr-8 -mt-8 w-24 h-24 bg-gradient-to-br from-blue-500/10 to-purple-500/10 dark:from-blue-500/5 dark:to-purple-500/5 rounded-full blur-2xl opacity-0 group-hover:opacity-100 transition-opacity duration-500"
    />
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider mb-1"
        >
          总盈亏
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-bold tracking-tight transition-colors duration-200 text-profit drop-shadow-sm"
          >
            $12,345.67
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with subtitle correctly 1`] = `
<div>
  <div
    class="glass-card rounded-xl p-5 relative overflow-hidden group hover-lift"
  >
    <div
      class="absolute top-0 right-0 -mr-8 -mt-8 w-24 h-24 bg-gradient-to-br from-blue-500/10 to-purple-500/10 dark:from-blue-500/5 dark:to-purple-500/5 rounded-full blur-2xl opacity-0 group-hover:opacity-100 transition-opacity duration-500"
    />
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider mb-1"
        >
          加载中
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-bold tracking-tight transition-colors duration-200 text-gray-900 dark:text-white"
          >
            --
          </p>
        </div>
        <p
          class="mt-2 text-sm text-gray-500 dark:text-gray-500 font-medium truncate flex items-center gap-1"
        >
          Loading...
        </p>
      </div>
    </div>
  </div>
</div>
`;
